@@ -1,5 +1,11 @@
 2007-11-07  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.c
+		- (nma_finalize): deinit crypto bits
+		- (nma_constructor): init crypto bits
+
+2007-11-07  Dan Williams  <dcbw@redhat.com>
+
 	* src/utils/crypto.h
 	  src/utils/crypto.c
 		- Fix linkage of nm_crypto_error_quark() by moving implementation to
